--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookstate/core": "^4.0.2",
     "@hookstate/devtools": "^4.0.3",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
